--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
+    "assert": "^2.0.0",
     "autoprefixer": "^10.4.14",
-    "axios": "^1.4.0",
+    "browserify-zlib": "^0.2.0",
+    "https-browserify": "^1.0.0",
     "postcss-cli": "^10.1.0",
-    "tailwindcss": "^3.3.3"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.3.3",
+    "url": "^0.11.1",
+    "util": "^0.12.5"
   }
 }
